I gave the body a width of 100%, the screen has a gap to the right and I don't knwo why. I gave the case paragraphs a margin top of -80px to bring them closer the titles. Hopefully this fixes the problem of not being able to see full text in the cases.

--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -1083,8 +1083,9 @@ nav > a {
 
 
 .cases > p {
-    margin: 10px;
+    margin-top: -80px;
     font-size: .9rem;
+
 }
 /*  Call to Action */
     
